<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingFragment">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/first_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="150dp"
        android:text="@string/netspay_helps"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_nav_item1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="30dp"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toStartOf="@+id/iv_nav_item2"
        android:background="@color/bottom_nav_color"
        android:src="@drawable/active_nav_item"/>

    <ImageView
        android:id="@+id/iv_nav_item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_nav_item1"
        android:paddingVertical="30dp"
        android:paddingHorizontal="11dp"

        app:layout_constraintEnd_toStartOf="@id/iv_nav_item3"
        android:background="@color/bottom_nav_color"
        android:src="@drawable/inactive_nav_item"/>

    <ImageView
        android:id="@+id/iv_nav_item3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_nav_item2"
        android:paddingVertical="30dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/bottom_nav_color"
        android:src="@drawable/inactive_nav_item"/>

    <TextView
        android:id="@+id/bt_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/bottom_nav_color"
        app:cornerRadius="0dp"
        android:paddingHorizontal="36dp"
        android:textColor="@color/white"
        android:paddingVertical="24dp"
        />

    <TextView
        android:id="@+id/bt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/bottom_nav_color"
        app:cornerRadius="0dp"
        android:paddingHorizontal="36dp"
        android:textColor="@color/white"
        android:paddingVertical="24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>